--- a/app/src/main/res/drawable/checkbox_checked_jpg.xml
+++ b/app/src/main/res/drawable/checkbox_checked_jpg.xml
@@ -1,9 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:state_checked="true"
-    android:drawable=" @drawable/check02_16"
-
-    />
-
-
+    <item android:state_checked="true" android:drawable="@drawable/check02_16"/>
+    <item android:drawable="@drawable/uncheck01_16"/>
 </selector>
